fix(menu): fix close icon and scrollbar size, change textareas for upload fields and add ie placeholders for them

--- a/src/styles/partials/menu.less
+++ b/src/styles/partials/menu.less
@@ -18,7 +18,7 @@
     -webkit-overflow-scrolling: touch;
 
     &::-webkit-scrollbar {
-	      width: 7px;
+	      width: 3px;
 	} 
 
 	&::-webkit-scrollbar-track {
@@ -58,19 +58,6 @@
 		height: 90px;
 		background: url(../img/logo-white.png) no-repeat center;
 		background-size: 55%;
-
-		.close {			
-			display: block;
-			position: absolute;
-			float: left;
-			overflow: hidden;
-			width: 40px;
-			height: 40px;
-			top: 50%;
-			margin-top: -25px;
-			background: url(../img/close-menu.png) no-repeat center;
-			background-size: 15px;
-		}
 	}
 
 	.list {
@@ -150,80 +137,6 @@
 			font-family: @regular;
 			color: white;
 			text-align: center;
-		}
-
-		form {
-			display: block;
-			overflow: hidden;
-			padding: 30px 0 0;
-
-			input {
-				width: 100%;
-				height: 35px;
-				font-size: 15px;
-				font-family: @semibold;
-				color: @dark;
-				margin-bottom: 20px;
-				border: none;
-
-				&.link {
-					background: white url(../img/link-icon.png) no-repeat center right 10px;
-					background-size: 25px 25px;
-					margin-bottom: 0;
-				}
-			}
-
-			textarea {
-				width: 100%;
-				height: 130px;
-				padding-top: 10px;
-				margin-bottom: 15px;
-				resize: none;
-			}
-
-			input, textarea {
-				padding-left: 12px;
-				-webkit-box-sizing: border-box;
-				-moz-box-sizing: border-box;
-				box-sizing: border-box;
-
-				&::-webkit-input-placeholder {
-				   color: #999999;
-				   font-family: @semibold;
-				   font-size: 15px;
-				}
-
-				&:-moz-placeholder { /* Firefox 18- */
-				   color: #999999;  
-				   font-family: @semibold;
-				   font-size: 15px;
-				}
-
-				&::-moz-placeholder {  /* Firefox 19+ */
-				   color: #999999; 
-				   font-family: @semibold;
-				   font-size: 15px; 
-				}
-
-				&:-ms-input-placeholder {  
-				   color: #999999;  
-				   font-family: @semibold;
-				   font-size: 15px;
-				}
-			}
-
-			label {
-				display: block;
-				font-size: 15px;
-				font-family: @semibold;
-				color: white;
-				margin-bottom: 20px;
-			}
-
-			.button {
-				display: block;
-				margin: 45px auto 0;
-			}
 		}
 	}
 }
